se agregan elementos básicos de documento html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<html>
-    <head></head>
-    <body>
-        <h1>"Texto de prueba"</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width"/>
+    <title>My test page</title>
+  </head>
+  <body>
+    <h1>ant95’s First HTML Page</h1>
+    <img src="https://play-lh.googleusercontent.com/xlnwmXFvzc9Avfl1ppJVURc7f3WynHvlA749D1lPjT-_bxycZIj3mODkNV_GfIKOYJmG" alt="My test image"  width="40" 
+     height="50"/>
+    <p>Este es un párrafo</p>
+    <p>Lo que sigue es una lista :</p>
+    <ul><li>elemento 1</li><li>elemento 2</li></ul>
+    <p>Visita mi <a href="https://es-la.facebook.com/">página de facebook</a></p>
+  </body>
 </html>
